--- a/my-app/public/styles.css
+++ b/my-app/public/styles.css
@@ -36,7 +36,7 @@
     color: #ccc;
   }
   .note {
-    background: rgb(204, 17, 17);
+    background: #fff;
     border-radius: 7px;
     box-shadow: 0 2px 5px #ccc;
     padding: 10px;
